--- a/src/guias.html
+++ b/src/guias.html
@@ -50,7 +50,7 @@
     
     <div class="slider"></div>
     <main>
-        <div class="main-menu">Inicio > Guias > Pixels > Sova > Ascent</div>
+        <div class="main-menu">Logs Nao de um passo maior que a perna INSTA TWITCH YOUTUBE FDS</div>
         <div class="main-content">
 
 <a href="pixels.html">
