header menu background and test nav position

--- a/src/guias.html
+++ b/src/guias.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="freestyle.css">
 </head>
 <body id="body">
+    <div class="slider">
     <header id="mercicici">
         <div class="menubutton">
             <div class="openmenu">
@@ -48,7 +49,7 @@
 
     </header>
     
-    <div class="slider"></div>
+    </div>
     <main>
         <div class="main-menu">Logs Nao de um passo maior que a perna INSTA TWITCH YOUTUBE FDS</div>
         <div class="main-content">
