--- a/src/inicio.html
+++ b/src/inicio.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="freestyle.css"> 
 </head>
 <body id="body">
+    <div class="slider">
     <header id="mercicici">
         <div class="menubutton">
             <div class="openmenu">
@@ -40,7 +41,7 @@
 
     </header>
     
-    <div class="slider"></div>
+    </div>
     <main>
         <div class="main-menu">Inicio > Guias > Pixels > Sova > Ascent</div>
         <div class="home-content">
