--- a/src/pixels.html
+++ b/src/pixels.html
@@ -14,6 +14,7 @@
 
 </head>
 <body id="body">
+    <div class="slider">
     <header id="mercicici">
         <div class="menubutton">
             <div class="openmenu">
@@ -54,7 +55,7 @@
 
     </header>
     
-    <div class="slider"></div>
+    </div>
     <main>
         <div class="main-menu">Inicio > Guias > Pixels > Sova > Ascent</div>
         <div class="main-content">
