--- a/src/inicio.html
+++ b/src/inicio.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="freestyle.css"> 
 </head>
 <body id="body">
-    <div class="slider">
+    <div id="slider" class="slider">
     <header id="mercicici">
         <div class="menubutton">
             <div class="openmenu">
