--- a/src/pixels.html
+++ b/src/pixels.html
@@ -10,11 +10,11 @@
 
    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="freestyle.css">
-    <link rel="stylesheet" href="imgs.css">
+
 
 </head>
 <body id="body">
-    <div class="slider">
+    <div id="slider" class="slider">
     <header id="mercicici">
         <div class="menubutton">
             <div class="openmenu">
@@ -89,7 +89,9 @@
         </div>
         <div class="recomendados">Recomendados</div>
     </main>
-    
+
+    <script type="text/javascript" src="freestyle.js">
+    </script>
 </body>
 <footer>
     <hr>
@@ -97,8 +99,6 @@
     <hr>
 </footer>
 
-<script type="text/javascript">
-</script>
 
 
 
