random meme update

--- a/src/inicio.html
+++ b/src/inicio.html
@@ -44,7 +44,7 @@
                 <span class="EC-icon">200EC</span>
     
             </span>
-            <div class="cube"></div>
+            <a href="https://mercicicis2.github.io/merci2/src/guias.html"class="cube"></a>
             </div>
     
         </header>
