--- a/src/guias.html
+++ b/src/guias.html
@@ -62,7 +62,7 @@
     <div class="box mainbox1"><div class="mainbox-background">Pixels</div>
 </div>
 
-<a href="agentes.html#main">
+<a href="agentes.html">
             <div class="box mainbox2"><div class="mainbox-background">Agentes</div></div>
         </a>
             <div class="box mainbox3"><div class="mainbox-background">Mapas</div></div>
