--- a/src/guias.html
+++ b/src/guias.html
@@ -51,7 +51,7 @@
                     <!--  <span class="premium-icon">Premium</span> -->
                     <span class="EC-icon">200EC</span>
                 </span>
-                
+
             <a href="https://mercicicis2.github.io/merci2/src/guias.html"class="cube"></a>
         </label>
     
@@ -70,7 +70,7 @@
     <div class="box mainbox1"><div class="mainbox-background">Pixels</div>
 </div>
 
-            <a href="agentes.html" class="box mainbox2"><div class="mainbox-background">Agentes</div></a>    
+            <a class="box mainbox2" href="agentes.html" ><div class="mainbox-background">Agentes</div></a>    
             <div class="box mainbox3"><div class="mainbox-background">Mapas</div></div>
             <div class="box mainbox4"><div class="mainbox-background">Hardware & Periféricos</div></div>
             <div class="box mainbox5"><div class="mainbox-background">Treinos</div></div>
