sword dash posawp

--- a/src/guias.html
+++ b/src/guias.html
@@ -67,9 +67,7 @@
         <div id="maincontent" class="main-content">
 
 
-    <div class="box mainbox1"><div class="mainbox-background">Pixels</div>
-</div>
-
+            <div class="box mainbox1"><div class="mainbox-background">Pixels</div></div>
             <a class="box mainbox2" href="agentes.html" ><div class="mainbox-background">Agentes</div></a>    
             <div class="box mainbox3"><div class="mainbox-background">Mapas</div></div>
             <div class="box mainbox4"><div class="mainbox-background">Hardware & Periféricos</div></div>
