--- a/src/inicio.html
+++ b/src/inicio.html
@@ -57,11 +57,7 @@
 
 
 
-
-
-
-
-
+<!--  MAIN  -->
         <main>
             <div class="main-menu">Nao de um passo maior que a perna INSTA TWITCH YOUTUBE FDS</div>
             <div class="main-content inicio">
