lore impsum and cell adaptation

--- a/src/guias.html
+++ b/src/guias.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="freestyle.css">
 </head>
 <body id="body">
+    <img src="../img/split.jpg" class="slider-img">
     <div id="slider" class="slider">
         <header id="mercicici">
             <!--Mobile button-->
