--- a/src/agentes.html
+++ b/src/agentes.html
@@ -14,22 +14,26 @@
 
 </head>
 <body id="body">
+<img src="../img/split.jpg" class="slider-img">
 
 <div id="slider" class="slider">
     <header id="mercicici">
+
+        <!--Mobile Menu Nav-->
         <div class="menubutton">
             <div class="openmenu">
-            <nav>
-                <ul>
-                    <a href="inicio.html"><li>Inicio</li></a>
-                    <a href="guias.html"><li>Guias</li></a>
-                    <li>Comunidade</li>
-                    <li>Campeonatos</li>
-                    <li>Loja</li>
-                </ul>
-            </nav>
+                <nav>
+                    <ul>
+                        <a href="inicio.html"><li>Inicio</li></a>
+                        <a href="guias.html"><li>Guias</li></a>
+                        <li>Comunidade</li>
+                        <li>Campeonatos</li>
+                        <li>Loja</li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-    </div>
+
         <!--PC LOGO-->
         <div id="iddiv" class="logo"></div>
 
@@ -62,12 +66,12 @@
   
 </div>
     <main id="main">
-        <div class="main-menu">Inicio > Guias > Pixels > Sova > Ascent</div>
+        <div class="main-menu" style="display: flex;  justify-content: space-between; align-items: flex-start;"><span>70%</span><span>Maestria</span></div>
         <div id="maincontent" class="main-content spacebetweentest">
 
               <!--MAIN NAV-->
               
-                <div class="puxel-content-nav">
+                <div class="content-left">
                     <nav>
                         <ul>
                             <li><label>AGENTES : </label>
@@ -104,7 +108,7 @@
                 </div>
             <!--MAIN CONTENT-->
 
-                <div class="pixel-content-main-background">
+                <div class="content-main">
                     <div class="navigation">
                         <nav>
                         Agentes / Jett v / Introducao v
@@ -121,19 +125,24 @@
                     <br><br>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Orci dapibus ultrices in iaculis nunc sed. Ante metus dictum at tempor commodo ullamcorper. Odio pellentesque diam volutpat commodo. Erat velit scelerisque in dictum non consectetur a erat. Duis ultricies lacus sed turpis tincidunt id. At elementum eu facilisis sed odio morbi. Magna etiam tempor orci eu lobortis elementum nibh tellus. Nunc id cursus metus aliquam eleifend mi. Senectus et netus et malesuada fames ac. Imperdiet nulla malesuada pellentesque elit eget gravida.</p>
                     <br><br>
+
+
+
+
+
                     <div class="box-agent-test">
                         <img src="../img/jettselectagent.png" class="img1"></img>
                         <div class="description" style="display: flex; justify-content: center; align-items:center ; padding-left: 20px; flex-direction: column;">
-                            <span style="width: 100%; height: 30%;"><strong>Comportamento:</strong></span>
-                            <span style="width: 100%; height: 30%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span> </div>
+                            <span class="box-agent-test-title" style="width: 100%; height: 30%;"><strong>Comportamento:</strong></span>
+                            <span class="box-agent-test-p" style="width: 100%; height: 30%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span> </div>
                     </div>
                     <br>
                     <br>
                     <div class="box-agent-test">
                         <img src="../img/jetthabilits.png" class="img1"></img>
                         <div class="description" style="display: flex; justify-content: center; align-items:center ; padding-left: 20px; flex-direction: column;">
-                            <span style="width: 100%; height: 30%;"><strong>Uso de Habilidades:</strong></span>
-                            <span style="width: 100%; height: 30%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span> </div>
+                            <span class="box-agent-test-title" style="width: 100%; height: 30%;"><strong>Uso de Habilidades:</strong></span>
+                            <span class="box-agent-test-p" style="width: 100%; height: 30%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span> </div>
                     </div>
 
                     <div class="pixel-content-main"></div>
@@ -157,7 +166,7 @@
 
 
                 <!-- MAIN XP CONTENT--> 
-                <div class="pixel-content-xp">
+                <div class="content-right">
                     <nav>
                         <ul>
                             <label style="font-size: 1.3em;">Maestria:</label>
@@ -195,7 +204,6 @@
         </div>
         <div class="recomendados">Recomendados</div>
     </main>
-
     <script type="text/javascript" src="freestyle.js">
     </script>
 </body>
