--- a/src/inicio.html
+++ b/src/inicio.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="freestyle.css"> 
 </head>
 <body id="body">
-    <div id="slider" class="slider">
+    <img id="slider" src="../img/split.jpg" class="slider-img">
+    <div class="slider">
         <header id="mercicici">
             <div class="menubutton">
                 <div class="openmenu">
@@ -70,7 +71,10 @@
 
     </main>
     
+   
     <script type="text/javascript" src="freestyle.js"></script>
+
+
 </body>
 <footer>
     <hr>
