first tailwind test

--- a/src/guias.html
+++ b/src/guias.html
@@ -65,8 +65,7 @@
     </div>
     <main id="main">
         <div id="mainmenu" class="main-menu">Nao de um passo maior que a perna INSTA TWITCH YOUTUBE FDS</div>
-        <div id="maincontent" class="main-content">
-
+        <div id="maincontent" style="height: 700px" class="main-content w-full bg-gradient-to-b from-cyan-800 from-0% to-transparent to-15% m-0 pt-5 pb-5 flex flex-row flex-wrap items-start justify-center content-start gap-5">
 
             <div class="box mainbox1"><div class="mainbox-background">Pixels</div></div>
             <a class="box mainbox2" href="agentes.html" ><div class="mainbox-background">Agentes</div></a>    
