--- a/src/inicio.html
+++ b/src/inicio.html
@@ -58,14 +58,14 @@
 <!--  MAIN  -->
 <main id="main">
     <div class="main-menu" style="display: flex;  justify-content: space-between; align-items: flex-start;"><span>70%</span><span>Maestria</span></div>
-    <div id="maincontent" class="main-content spacebetweentest">
+    <div id="maincontent" class="main-content bg-gradient-to-b from-cyan-800 from-0% to-transparent to-15% m-0 pt-5 pb-5 w-full h-auto flex flex-row items-start justify-evenly gap-0 ">
 
           <!--MAIN NAV-->
           
          <!-- LEFT MAIN NAV-->
 
             <div class="content-left">
-                <div class="bg-red-200 w-100% h-7 pl-10 ml-9 rounded">asdasdasd</div>
+                <div class="bg-gradient-to-b from-teal-600 from-5% to-transparent w-100% h-7 pl-10 ml-9 rounded">asdasdasd</div>
 
                 <nav>
                     <ul>
