--- a/src/agentes.html
+++ b/src/agentes.html
@@ -59,9 +59,11 @@
     </header>
   
 </div>
+
+
     <main id="main">
         <div class="main-menu" style="display: flex;  justify-content: space-between; align-items: flex-start;"><span>70%</span><span>Maestria</span></div>
-        <div id="maincontent" class="main-content spacebetweentest">
+        <div id="maincontent" class="main-content bg-gradient-to-b from-cyan-800 from-0% to-transparent to-15% m-0 pt-5 pb-5 w-full h-auto flex flex-row items-start justify-evenly gap-0 ">
 
               <!--MAIN NAV-->
               
