--- a/src/agentes.html
+++ b/src/agentes.html
@@ -10,7 +10,7 @@
 <body id="body">
 <img src="../img/split.jpg" class="slider-img">
 
-<div id="slider" class="slider">
+<div id="slider" class="slider-background-improviso">
     <header id="mercicici">
 
         <!--Mobile Menu Nav-->
