--- a/src/guias.html
+++ b/src/guias.html
@@ -9,7 +9,7 @@
 </head>
 <body id="body">
     <img src="../img/split.jpg" class="slider-img">
-    <div id="slider" class="slider">
+    <div id="slider" class="slider-background-improviso">
         <header id="mercicici">
             <!--Mobile button-->
             <label class="menubutton">
