--- a/src/inicio.html
+++ b/src/inicio.html
@@ -21,7 +21,7 @@
 <img id="slider" src="../img/split.jpg" class="slider-img">
 
 
-    <div class="slider">
+    <div class="slider-background-improviso">
 
 
         <header id="mercicici">
@@ -89,8 +89,20 @@
           
          <!-- LEFT MAIN NAV-->
 
-            <div class="content-left">
-                <div class="bg-gradient-to-b from-teal-600 from-5% to-transparent w-100% h-7 pl-10 ml-9 rounded">asdasdasd</div>
+         
+            <div class="content-left flex flex-col gap-y-3">
+
+                <div class="bg-teal-600 w-100% h-auto ml-1 mr-1 pl-2 pr-2 rounded flex flex-col">
+                    <div class="content-left-title-bar w-full bg-slate-400 flex justify-between">VALORANT <span class="text-sm/7">24/05/24</span></div>
+                    <div class="content-left-title-bar w-full bg-slate-600 flex justify-center"><span class="text-sm/7">Patch 19.05.03</span></div>
+                    <div class="content-left-info-bar">Dash : new behavior</div>
+                </div>
+
+                <div class="bg-teal-600 w-100% h-20 ml-1 mr-1 pl-2 pr-2 rounded ">
+                    <div class="content-left-title-bar">VALORANT</div>
+                    <div class="content-left-info-bar">Dash : new behavior</div>
+
+                </div>
 
                 <nav>
                     <ul>
