try responsive tw

--- a/src/inicio.html
+++ b/src/inicio.html
@@ -90,7 +90,7 @@
          <!-- LEFT MAIN NAV-->
 
          <!-- TITLE-->
-            <div class="content-left flex flex-col gap-y-3">
+            <div class="content-left flex-none sm:flex flex-col gap-y-3">
 
                 <div class=" w-100% h-auto ml-1 mr-1 p-2 rounded flex flex-col">
                     <div class="content-left-title-bar w-full flex justify-between">Updates </div>
@@ -182,7 +182,7 @@
 
 
             <!-- RIGHT MAIN CONTENT--> 
-            <div class="content-right flex flex-col gap-y-3">
+            <div class="content-right flex-none sm:flex flex-col gap-y-3">
 
 
                 
