--- a/src/guias.html
+++ b/src/guias.html
@@ -64,7 +64,7 @@
     
     </div>
     <main id="main">
-        <div id="mainmenu" class="main-menu">Nao de um passo maior que a perna INSTA TWITCH YOUTUBE FDS</div>
+        <div id="mainmenu" class="main-menu flex items-center text-white">Nao de um passo maior que a perna</div>
         <div id="maincontent" style="height: 700px" class="main-content w-full bg-gradient-to-b from-cyan-800 from-0% to-transparent to-15% m-0 pt-5 pb-5 flex flex-row flex-wrap items-start justify-center content-start gap-5">
 
             <div class="box mainbox1"><div class="mainbox-background">Pixels</div></div>
@@ -72,7 +72,7 @@
             <div class="box mainbox3"><div class="mainbox-background">Mapas</div></div>
             <div class="box mainbox4"><div class="mainbox-background">Hardware & Periféricos</div></div>
             <div class="box mainbox5"><div class="mainbox-background">Treinos</div></div>
-            <div class="box mainbox6"><div class="mainbox-background">Desempenho</div></div>  
+            <div class="box mainbox6"><div class="mainbox-background">Saúde</div></div>  
             <div class="box mainbox7"><div class="mainbox-background">Coach Service</div></div>
             <div class="box mainbox8"><div class="mainbox-background">Procurando Grupo</div></div>
        
