--- a/src/inicio.html
+++ b/src/inicio.html
@@ -116,7 +116,7 @@
             <div class="content-left flex-none sm:flex flex-col gap-y-3 w-15% min-w-52" >
 
                 <!--AREA NAME-->
-                <div class=" w-100% h-auto ml-1 mr-1 p-2 rounded flex flex-col">
+                <div class=" w-100% h-14 ml-1 mr-1 p-2 rounded flex flex-col border-sky-500 border-2">
                     <div class="content-left-title-bar w-full flex justify-between">Atualizações</div>
                 </div>
 
@@ -143,10 +143,12 @@
         <!-- MID MAIN CONTENT-->
 
             <div class="content-main w-auto" >
-                    <div class=" w-100% h-auto ml-1 mr-1 py-2 rounded flex flex-col">
-                        <div class="content-left-title-bar w-full flex justify-between">Agentes / Jett v / Introducao v</div>
+                    <div class=" w-100% h-14 ml-1 mr-1 py-2 rounded flex flex-col">
+                        <div class="content-left-title-bar w-full flex justify-between">aasdasd</div>
                     </div>
-                <h1 class="text-2xl">Introdução</h1>
+                <h1 class="text-2xl">Noticias</h1>
+                <label>24/07/2024</label>
+                <br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <br>
                 <img src="../img/jettselectagent.png" class="agent-overview"></img>
@@ -180,10 +182,9 @@
 
 
                 <!-- CORRIGIR ISTO -->
-                <div class=" w-100% h-auto ml-1 mr-1 p-2 rounded flex flex-row pb-4 -mb-4 border-solid border-sky-400 border-2">
+                <div class=" w-100% h-14 ml-1 mr-1 p-2 rounded flex flex-row pb-4 border-solid border-sky-400 border-2    ">
                     <div class="content-left-title-bar w-full flex justify-between">Parceiros </div>
-                    <div class=""><img style="object-fit: cover;
-                        object-position: 80% 100%; width: 50px;" id="parceirosgameicon" src="../img/othericons/lol.png" alt=""></div>
+                    <div class=""><img style="width: 50px; position: relative; top: -3px" id="parceirosgameicon" src="../img/othericons/lol.png" alt=""></div>
                 </div>
 
                 <div class="bg-teal-600 w-100% h-auto ml-1 mr-1 p-1.5 rounded flex flex-col">
