--- a/src/test.html
+++ b/src/test.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="test.css">
     <title>Document</title>
 </head>
 <body>
-    <h1 class="font-bold underline bg-yellow-500 size-6 w-9">
-        Hello world!
-    </h1>
+ 
+<input id="vapocheckbox" class="" type="checkbox">
+<div id="vapo" class="vapo w-10 h-10 bg-slate-500"></div>
+
+
 </body>
 </html>
