--- a/src/inicio.html
+++ b/src/inicio.html
@@ -24,28 +24,34 @@
     <div class="slider-background-improviso">
 
 
-        <header id="mercicici">
-            <div class="menubutton">
-                <div class="openmenu">
-                <nav>
-                    <ul>
-                        <a href="inicio.html"><li>Inicio</li></a>
-                        <a href="guias.html"><li>Guias</li></a>
-                        <li>Comunidade</li>
-                        <li>Campeonatos</li>
-                        <li>Loja</li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
+        <header id="mercicici"> 
+            <!-- estrutura checkbox em vez de hover para mobile-->
+            <input id="tempasdasd" type="checkbox" class="tempasdasd">
+            <label class="label-menubutton" for="" class="flex md:hidden">
+                <!-- Mobile menu -->
+                <div class="menubutton">
+                    <div class="openmenu">
+                    <nav>
+                        <ul>
+                            <a href="inicio.html"><li>Inicio</li></a>
+                            <a href="guias.html"><li>Guias</li></a>
+                            <li>Comunidade</li>
+                            <li>Campeonatos</li>
+                            <li>Loja</li>
+                        </ul>
+                    </nav>
+                    </div>
+                </div>
+            </label>
             <a href="inicio.html"id="iddiv" class="logo"></a>
     
             <nav class="headernav">
-                <ul>             
-                    <a href="guias.html"><li>Guias</li></a>
-                    <a href="comunidade.html"><li>Comunidade</li></a>
-                    <a href="campeonatos.html"><li>Campeonatos</li></a>
-                    <a href="loja.html"><li>Loja</li></a>
+                <ul>       
+                    <a href="inicio.html" class="hover:bg-slate-300 hover:text-black hover:font-semibold rounded-md"><li>Inicio</li></a>      
+                    <a href="guias.html" class="hover:bg-slate-300 hover:text-black hover:font-semibold rounded-md"><li>Guias</li></a>
+                    <a href="comunidade.html" class="hover:bg-slate-300 hover:text-black hover:font-semibold rounded-md"><li>Comunidade</li></a>
+                    <a href="campeonatos.html" class="hover:bg-slate-300 hover:text-black hover:font-semibold rounded-md"><li>Campeonatos</li></a>
+                    <a href="loja.html" class="hover:bg-slate-300 hover:text-black hover:font-semibold rounded-md"><li>Loja</li></a>
                 </ul>
             </nav>
     
@@ -68,16 +74,6 @@
 
 
     </div>
-
-
-
-
-
-
-
-
-
-
 
 
 <!--  MAIN  -->
