--- a/src/inicio.html
+++ b/src/inicio.html
@@ -27,7 +27,7 @@
         <header id="mercicici"> 
             <!-- estrutura checkbox em vez de hover para mobile-->
             <input id="tempasdasd" type="checkbox" class="tempasdasd">
-            <label class="label-menubutton" for="" class="flex md:hidden">
+            <label class="label-menubutton flex md:hidden" for="" >
                 <!-- Mobile menu -->
                 <div class="menubutton">
                     <div class="openmenu">
