--- a/src/inicio.html
+++ b/src/inicio.html
@@ -100,7 +100,7 @@
             <div class="content-left flex-none md:flex flex-col gap-y-3 w-15% min-w-52" >
 
                 <!--AREA NAME-->
-                <div class=" w-100% h-14 ml-1 mr-1 p-2 rounded flex flex-col border-sky-500 border-2">
+                <div class=" w-100% h-9 ml-1 mr-1 p-2 rounded flex flex-col"> <!-- border-sky-500 border-2 -->
                     <div class="content-left-title-bar w-full flex justify-between">Atualizações</div>
                 </div>
 
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="bg-zinc-800 w-100% h-auto ml-1 mr-1 p-1.5 rounded ">
-                    <div class="content-left-title-bar w-full bg-teal-600 flex justify-between "><span class="text-blue-500">EFEXIS</span><span class="text-sm/7">24/05/24</span></div>
+                    <div class="content-left-title-bar w-full bg-teal-600 flex justify-between "><span class="text-blue-300">EFEXIS</span><span class="text-sm/7">24/05/24</span></div>
                     <div class="content-left-title-bar w-full bg-black flex justify-center"><span class="text-sm/7">Patch 19.05.03</span></div>
                     <div class="content-left-info-bar">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
@@ -134,12 +134,10 @@
 
         <!-- MID MAIN CONTENT-->
 
-            <div class="content-main w-auto border-sky-500 border-2" >
-                    <div class=" w-100% h-14   py-2 rounded flex flex-col  border-sky-500 border-2">
-                        <div class="content-left-title-bar w-full flex justify-between">aasdasd</div>
-                    </div>
+            <div class="content-main w-auto" > <!-- border-sky-500 border-2 -->
 
-                <h1 class="text-5xl font-normal">Noticias</h1>
+
+                <h1 class="text-5xl font-bold pt-11">TORNEIOS DE COMUNIDADE - 31/05 À 06/06</h1>
                 <label>24/07/2024</label>
                 <br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -149,21 +147,33 @@
                 <br><br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Orci dapibus ultrices in iaculis nunc sed. Ante metus dictum at tempor commodo ullamcorper. Odio pellentesque diam volutpat commodo. Erat velit scelerisque in dictum non consectetur a erat. Duis ultricies lacus sed turpis tincidunt id. At elementum eu facilisis sed odio morbi. Magna etiam tempor orci eu lobortis elementum nibh tellus. Nunc id cursus metus aliquam eleifend mi. Senectus et netus et malesuada fames ac. Imperdiet nulla malesuada pellentesque elit eget gravida.</p>
                 <br>
-
+                <p>Recomendados/Associados:</p>
                 <!-- pre box -->
-                <a href="" class="box-agent-test max-w-3/4 h-20 bg-pink-600 flex flex-row">
-                    <img src="../img/jettselectagent.png" class="img1 object-cover"></img>
-                    <div class="description h-3/4">
-                    
+                <a href="" class="flex flex-row max-w-2xl h-auto">
+                    <img src="../img/jettselectagent.png" class="object-cover h-auto w-28 bg-no-repeat rounded-l-lg"></img>
+                    <div class="flex flex-col bg-zinc-800 h-4/4 w-full p-3 pl-4 rounded-r-md">
+                        <p class=" h-1/3 font-bold">Title content</p> <!-- bg-slate-400 -->
+                        <p class=" h-auto text-basse pt-2" >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>           
                     </div>
                 </a>
 
-                <div class="box-agent-test">
-                    <img src="../img/jetthabilits.png" class="img1 object-cover"></img>
-                    <div class="description" style="display: flex; justify-content: center; align-items:center ; padding-left: 20px; flex-direction: column;">
-                        <span class="box-agent-test-title" style="width: 100%; height: 30%;"><strong>Uso de Habilidades:</strong></span>
-                        <span class="box-agent-test-p" style="width: 100%; height: 30%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span> </div>
-                </div>
+                <a href="" class="box-agent-test flex flex-row max-w-2xl h-auto">
+                    <img src="../img/jetthabilits.png" class="img1 object-cover h-auto w-28 bg-no-repeat"></img>
+                    <div class="description flex flex-col h-4/4 w-full p-3 pl-4">
+                        <p class=" h-1/3 font-bold">Title content</p> <!-- bg-slate-400 -->
+                        <p class=" h-auto text-base pt-2" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>           
+                    </div>
+                </a>
+
+
+                <a href="" class="box-agent-test max-w-2xl h-auto flex flex-row">
+                    <img src="../img/jetthabilits.png" class="img1 object-cover h-auto w-28 bg-no-repeat flex-wrap"></img>
+                    <div class="description h-4/4 w-full p-3 pl-4 flex flex-col">
+                        <p class=" h-1/3 font-bold">Title content</p> <!-- bg-slate-400 -->
+                        <p class=" h-auto text-base pt-2" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae nunc sed velit dignissim sodales ut eu sem integer. Turpis egestas integer eget aliquet nibh. Tellus mauris a diam maecenas. Turpis in eu mi bibendum neque. Purus sit amet volutpat consequat mauris nunc congue nisi vitae. </p>           
+                    </div>
+                </a>
+
                 <div class="recomendados">Recomendados</div>
                 <div class="pixel-content-main"></div>
             </div>
@@ -175,9 +185,8 @@
 
 
                 <!-- CORRIGIR ISTO -->
-                <div class=" w-100% h-14 ml-1 mr-1 p-2 rounded flex flex-row pb-4 border-solid border-sky-400 border-2    ">
-                    <div class="content-left-title-bar w-full flex justify-between">Parceiros </div>
-                    <div class=""><img style="width: 50px; position: relative; top: -3px" id="parceirosgameicon" src="../img/othericons/lol.png" alt=""></div>
+                <div class="  w-100% h-9 ml-1 mr-1 p-2 rounded flex flex-col">
+                    Parceiros 
                 </div>
 
                 <div class="bg-teal-600 w-100% h-auto ml-1 mr-1 p-1.5 rounded flex flex-col">
