--- a/src/inicio.html
+++ b/src/inicio.html
@@ -158,7 +158,7 @@
                 </a>
 
                 <a href="" class="box-agent-test flex flex-row max-w-2xl h-auto">
-                    <img src="../img/jetthabilits.png" class="img1 object-cover h-auto w-28 bg-no-repeat"></img>
+                    <img src="../img/jetthabilits.png" class="img1 object-cover h-auto w-28 bg-no-repeat rounded-l-lg"></img>
                     <div class="description flex flex-col h-4/4 w-full p-3 pl-4">
                         <p class=" h-1/3 font-bold">Title content</p> <!-- bg-slate-400 -->
                         <p class=" h-auto text-base pt-2" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>           
@@ -167,7 +167,7 @@
 
 
                 <a href="" class="box-agent-test max-w-2xl h-auto flex flex-row">
-                    <img src="../img/jetthabilits.png" class="img1 object-cover h-auto w-28 bg-no-repeat flex-wrap"></img>
+                    <img src="../img/jetthabilits.png" class="img1 object-cover h-auto w-28 bg-no-repeat rounded-l-lg"></img>
                     <div class="description h-4/4 w-full p-3 pl-4 flex flex-col">
                         <p class=" h-1/3 font-bold">Title content</p> <!-- bg-slate-400 -->
                         <p class=" h-auto text-base pt-2" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae nunc sed velit dignissim sodales ut eu sem integer. Turpis egestas integer eget aliquet nibh. Tellus mauris a diam maecenas. Turpis in eu mi bibendum neque. Purus sit amet volutpat consequat mauris nunc congue nisi vitae. </p>           
