--- a/src/inicio.html
+++ b/src/inicio.html
@@ -195,7 +195,7 @@
                     </div>
                     <div class="cldp0 cldp text-xs inline-block mt-1 mb-1  ">                     
                         <div class="bg-[url('../img/abilitsicon/Leer.webp')] bg-slate-500 h-6 w-6 bg-cover rounded-sm inline-block -mb-1"></div>
-                        <span class="text-sm text-gray-100"><strong class="text-sm text-white">Leer C : </strong> Agora não afeta mais inimigos dentro da <div class="bg-[url('../img/abilitsicon/cloudburst.webp')] bg-slate-500 h-6 w-6 bg-cover rounded-sm inline-block -mb-1 mr-1"></div><strong>CloudBurst</strong> da <div class="bg-[url('../img/agenticon/jett.webp')] bg-slate-500 h-6 w-6 bg-cover rounded-sm inline-block -mb-1 mr-1"></div><strong>JETT</strong>.</span> <br>
+                        <span class="text-sm text-gray-100"><strong class="text-sm text-white">Leer C : </strong> Agora não afeta mais inimigos dentro da <div class="bg-[url('../img/abilitsicon/cloudburst.webp')] bg-slate-500 h-6 w-6 bg-cover rounded-sm inline-block -mb-1 mr-1"></div><strong>CloudBurst</strong> da <div class="bg-[url('../img/agenticon/Jett.webp')] bg-slate-500 h-6 w-6 bg-cover rounded-sm inline-block -mb-1 mr-1"></div><strong>JETT</strong>.</span> <br>
                     </div>
 
                     <div class="cldp0 cldp text-xs inline-block mt-1 mb-1">                     
