--- a/src/inicio.html
+++ b/src/inicio.html
@@ -140,7 +140,7 @@
                     <hr class="border-cyan-600 border-2 rounded-md mb-1">
 
                      <!-- content left - Agents details content  -->
-                     <div class="cldbg0 cldbg w-full h-auto mt-2 mb-2 border-pink-700 border-2">
+                     <div class="cldbg0 cldbg w-full h-auto mt-2 mb-2">
                         <!--   <img src="../img/bind.jpg" class="border-2 border-blue-500 absolute z-10">-->
                         <div class="bg-[url('../img/agenticon/reyna2.jpg')] bg-slate-800 h-10 bg-no-repeat flex justify-center bg-cover bg-center  items-center text-xl font-bold rounded-sm mb-2 "><span class="opacity-95 text-2xl">REYNA</span></div>
                         <div class="cldbg0 cldbimg"></div><div class="clan0 clan"></div>
