--- a/src/inicio.html
+++ b/src/inicio.html
@@ -149,7 +149,7 @@
                           <!-- content -->
                         <div class="cldp0 cldp text-xs inline-block mt-1 mb-1 ">                   
                         <div class="bg-[url('../img/agenticon/reyna.webp')] bg-slate-500 h-6 w-6 bg-cover rounded-sm inline-block -mb-1"></div>
-                        <span class="text-sm"><strong class="text-sm">AGENTE : </strong> Corrigido o tamanho do pé da agente, antes tamanho 38 para 32.</span> <br>
+                        <span class="text-sm"><strong class="text-sm">Agente : </strong> Corrigido o tamanho do pé da agente, antes tamanho 38 para 32.</span> <br>
                         </div>
                         <div class="cldp0 cldp text-xs inline-block mt-1 mb-1  ">                     
                         <div class="bg-[url('../img/abilitsicon/Leer.webp')] bg-slate-500 h-6 w-6 bg-cover rounded-sm inline-block -mb-1"></div>
@@ -191,7 +191,7 @@
                           <!-- content -->
                     <div class="cldp0 cldp text-xs inline-block mt-1 mb-1 ">                   
                         <div class="bg-[url('../img/agenticon/reyna.webp')] bg-slate-500 h-6 w-6 bg-cover rounded-sm inline-block -mb-1"></div>
-                        <span class="text-sm"><strong class="text-sm">AGENTE : </strong> Corrigido o tamanho do pé da agente, antes tamanho 38 para 32.</span> <br>
+                        <span class="text-sm"><strong class="text-sm">Agente : </strong> Corrigido o tamanho do pé da agente, antes tamanho 38 para 32.</span> <br>
                     </div>
                     <div class="cldp0 cldp text-xs inline-block mt-1 mb-1  ">                     
                         <div class="bg-[url('../img/abilitsicon/Leer.webp')] bg-slate-500 h-6 w-6 bg-cover rounded-sm inline-block -mb-1"></div>
@@ -216,7 +216,7 @@
                           <!-- content -->
                     <div class="cldp0 cldp text-xs inline-block mt-1 mb-1 ">                   
                         <div class="bg-[url('../img/agenticon/reyna.webp')] bg-slate-500 h-6 w-6 bg-cover rounded-sm inline-block -mb-1"></div>
-                        <span class="text-sm"><strong class="text-sm">AGENTE : </strong> Corrigido o tamanho do pé da agente, antes tamanho 38 para 32.</span> <br>
+                        <span class="text-sm"><strong class="text-sm">Reyna : </strong> Corrigido o tamanho do pé da agente, antes tamanho 38 para 32.</span> <br>
                     </div>
                     <div class="cldp0 cldp text-xs inline-block mt-1 mb-1  ">                     
                         <div class="bg-[url('../img/abilitsicon/Leer.webp')] bg-slate-500 h-6 w-6 bg-cover rounded-sm inline-block -mb-1"></div>
