--- a/src/test.html
+++ b/src/test.html
@@ -8,7 +8,32 @@
     <title>Document</title>
 </head>
 <body>
- 
+    <div class="cldbg0 cldbg w-full h-auto mt-2 mb-2">
+        <!--   <img src="../img/bind.jpg" class="border-2 border-blue-500 absolute z-10">-->
+        <div class="bg-[url('../img/agenticon/reyna2.jpg')] bg-slate-800 h-10 bg-no-repeat flex justify-center bg-cover bg-center  items-center text-xl font-bold rounded-sm mb-2 "><span class="opacity-95 text-2xl">REYNA</span></div>
+        <div class="cldbg0 cldbimg"></div><div class="clan0 clan"></div>
+        
+
+        <!-- content -->
+        <div class="cldp0 cldp text-xs inline-block mt-1 mb-1 pl-1 pr-1">                   
+        <div class="bg-[url('../img/agenticon/reyna.webp')] bg-slate-500 h-6 w-6 bg-cover rounded-sm inline-block -mb-1"></div>
+        <span class="text-sm"><strong class="text-sm">Agente : </strong> Corrigido o tamanho do pé da agente, antes tamanho 38 para 32.</span> <br>
+        </div>
+
+        <div class="cldp0 cldp text-xs inline-block mt-1 mb-1 pl-1 pr-1">                     
+        <div class="bg-[url('../img/abilitsicon/Leer.webp')] bg-slate-500 h-6 w-6 bg-cover rounded-sm inline-block -mb-1"></div>
+        <span class="text-sm text-gray-100"><strong class="text-sm text-white">Leer C : </strong> Agora não afeta mais inimigos dentro da <div class="bg-[url('../img/abilitsicon/cloudburst.webp')] bg-slate-500 h-6 w-6 bg-cover rounded-sm inline-block -mb-1 mr-1"></div><strong>CloudBurst</strong> da <div class="bg-[url('../img/agenticon/jett.webp')] bg-slate-500 h-6 w-6 bg-cover rounded-sm inline-block -mb-1 mr-1"></div><strong>JETT</strong>.</span> <br>
+        </div>
+
+        <div class="cldp0 cldp text-xs inline-block mt-1 mb-1 pl-1 pr-1">                     
+        <div class="bg-[url('../img/abilitsicon/Empress.webp')] bg-slate-500 h-6 w-6 bg-cover rounded-sm inline-block -mb-1"></div>
+        <span class="text-sm"><strong class="text-sm">Empress X : </strong> Reduzida a quantidade de Orbs necessárias para a Ultimate, de 7 para 6. Saiba mais..💕</span> <p class="text-center text-xs mt-1">Saiba mais.</p>
+        </div>
+    
+    </div> 
+
+
+
 <input id="vapocheckbox" class="" type="checkbox">
 <div id="vapo" class="vapo w-10 h-10 bg-slate-500"></div>
 
